# mail.forwardemail.net

./: .eslintrc-auto-import.json  .gitignore  .npmrc  .nprc  .prettierignore  .versionrc.json  CHANGELOG.md  README.md  auto-imports.d.ts  compose.html  eslint.config.js  fix-delete-404-handling.patch  index.html  mail-restore-gitleaks.patch  package.json  playwright.config.js  pnpm-lock.yaml  release-guard.patch  tsconfig.json  vite.config.js  vitest.config.ts  workbox.config.cjs
.github/: dependabot.yml
.github/workflows/: build-desktop.yml  build-mobile.yml  ci.yml  deploy.yml  e2e-apps.yml  e2e-mobile-android.yml  e2e-mobile-ios.yml  e2e-webview.yml  matrix-all-github-activity-notification.yml  readme-screenshots.yml  release-desktop.yml  release-mobile.yml  release.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  PUSH_NOTIFICATIONS.md  RELEASES.md  SECRETS.md  SECURITY.md  TAURI_TESTING.md  WEBSOCKET.md  ai-implementation-plan.md  ai-test-plan.md  app-lock-architecture.md  building-webmail-db-schema-recovery.md  building-webmail-search.md  building-webmail-series.md  building-webmail-service-worker.md  building-webmail-technology-stack.md  building-webmail-vision-architecture.md  building-webmail-workers.md  cache-indexing-architecture.md  cross-platform-webview-gotchas.md  deployment-checklist.md  desktop-build-ci.md  desktop-ci-secrets.md  desktop-contributing.md  desktop-postmortem-macos-entitlements-2026-05-19.md  desktop-setup.md  ios-setup.md  mailbox-loading-flow.md  store-submission.md  worker-architecture.md
e2e-mobile/: package.json  pnpm-lock.yaml  run-android-e2e.sh
e2e-mobile/specs/: smoke.spec.ts
e2e-mobile/support/: app.ts
e2e-webview/: package.json  pnpm-lock.yaml
e2e-webview/setup/: global.ts  per-test.ts
e2e-webview/specs/: demo-blocked-toast.spec.ts  mark-as-read.spec.ts  native-attachment-add.spec.ts  native-attachment-open.spec.ts  native-compose-window.spec.ts
e2e-webview/support/: app.ts  browser.ts  demo.ts  interact.ts  platform.ts
public/: email-iframe.js  emoji-data.json  manifest.json  sw-message-normalize.js  sw-sync.js
scripts/: android-build.sh  android-dev.sh  check-cargo-cache.sh  configure-android-push.cjs  configure-mobile-display-name.cjs  generate-android-icon.sh  inject-android-mainactivity.cjs  inject-android-signing.cjs  inject-ios-signing.cjs  ios-build.sh  ios-dev.sh  prerelease.sh  release-desktop.sh  sync-version.cjs  update-readme-screenshots.mjs  update-readme-toc.mjs  validate-schema-version.js
scripts/android/: MainActivity.kt
src/: compose-main.ts  config.js  env.d.ts  main.ts  polyfills.ts
src-tauri/: Cargo.toml  Entitlements.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: android-push.json  default.json  desktop.json  ios-push.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/isolation/: index.html
src-tauri/plugins/tauri-plugin-unified-push/: Cargo.toml  build.rs
src-tauri/plugins/tauri-plugin-unified-push/android/: build.gradle.kts  proguard-rules.pro  settings.gradle
src-tauri/plugins/tauri-plugin-unified-push/android/src/main/: AndroidManifest.xml
src-tauri/plugins/tauri-plugin-unified-push/android/src/main/java/net/forwardemail/unifiedpush/: UnifiedPushPlugin.kt
src-tauri/plugins/tauri-plugin-unified-push/permissions/: default.toml
src-tauri/plugins/tauri-plugin-unified-push/permissions/autogenerated/: reference.md
src-tauri/plugins/tauri-plugin-unified-push/permissions/autogenerated/commands/: drain_messages.toml  pick_distributor.toml
src-tauri/plugins/tauri-plugin-unified-push/permissions/schemas/: schema.json
src-tauri/plugins/tauri-plugin-unified-push/src/: commands.rs  error.rs  lib.rs  mobile.rs  models.rs
src-tauri/src/: diagnostics.rs  file_picker_macos.rs  lib.rs  redaction.rs  self_heal_macos.rs
src/ai/: errors.ts  keystore-web.ts  markdown.ts  pricing.ts  smart-search.ts
src/locales/: pt-BR.json
src/stores/: aiAuditStore.ts  aiEnabledStore.ts  aiPanelStore.ts  aiPrefsStore.ts  aiProviderStore.ts  mailService.ts  mailbox-store-helpers.ts  mailboxActions.ts  mailboxStore.ts  messageStore.ts  search-helpers.ts  searchStore.ts  settings-helpers.ts  settingsRegistry.ts  settingsStore.ts  tabStore.ts  userContentStore.ts
src/styles/: base.css  main.css  tokens.css
src/svelte/: AboutDialog.svelte  AppLockSettings.svelte  Calendar.svelte  Compose.svelte  Contacts.svelte  Diagnostics.svelte  FeedbackModal.svelte  LockScreen.svelte  Login.svelte  Mailbox.svelte  MessageRow.svelte  PassphraseModal.svelte  Profile.svelte  Settings.svelte  VirtualList.svelte  toastsHost.js
src/types/: message.ts  userContent.ts
src/utils/: address.ts  ai-worker-client.js  auth.ts  background-service.js  bootstrap-ready.js  circuit-breaker.js  compose-signature.ts  compose-window.ts  contact-cache.js  conversation-grouper.js  crypto-store.js  date.ts  db-constants.ts  db-crypto-bridge.js  db-crypto.ts  db-engine.ts  db-recovery.js  db-worker-client.js  db.js  deferred-store.ts  demo-data.js  demo-mode.d.ts  demo-mode.js  desktop-download.js  diagnostics.ts  download.ts  draft-service.js  error-logger.ts  external-links.js  favicon-badge.js  feedback-payload.ts  file-picker.ts  i18n.js  ical-datetime.ts  ics-parser.ts  iframe-srcdoc.ts  inactivity-timer.js  inbox-poller.js  keyboard-shortcuts.js  label-filters.ts  (+41 more)
src/workers/: ai.worker.ts  sync-pure.ts  sync.worker.ts
tests/component/: BottomSheet.test.ts  MailtoPrompt.test.ts  PushNotificationSettings.test.ts
tests/e2e/: calendar-events.spec.js  calendar-upload.spec.js  calendar.spec.js  contacts-advanced.spec.js  contacts-carddav-fixes.spec.js  contacts-crud.spec.js  contacts-vcard.spec.js  contacts.spec.js  login.spec.js  mailbox-desktop.spec.js  mailbox.spec.js  mockApi.js
tests/fixtures/: calendar-helpers.js  contacts-helpers.js  mailbox-helpers.js  mockData.js  redaction-cases.json
tests/setup/: global.setup.ts  integration.setup.ts
tests/unit/: address.test.js  auth.test.js  body-render-debounce.test.ts  ci-scrollbar-regressions.test.ts  circuit-breaker.test.ts  date.test.js  (+84 more)
worker/: package.json
(+97 files in other folders)
