[package]
name = "forwardemail-desktop"
version = "0.10.16"
description = "Forward Email - Privacy-focused email client"
authors = ["Forward Email <support@forwardemail.net>"]
license = "BUSL-1.1"
repository = "https://github.com/forwardemail/mail.forwardemail.net"
edition = "2021"

[lib]
name = "forwardemail_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
# Embeds a W3C WebDriver server for E2E tests. Desktop-only, never enable
# in release builds — the server binds 127.0.0.1:4445 and grants full
# automation control of the app.
webdriver = ["dep:tauri-plugin-webdriver"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }
time = "0.3"

[dependencies]
tauri = { version = "2.10.3", features = [
  "tray-icon",
  "image-png",
  "devtools",
] }
tauri-plugin-notification = "2.3.3"
tauri-plugin-deep-link = "2.4.8"
tauri-plugin-process = "2.3.1"
tauri-plugin-opener = "2.5.3"
tauri-plugin-log = "2.8.0"
tauri-plugin-os = "2.3.2"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-fs = "2.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
regex = "1"
time = { version = "0.3", features = ["macros", "formatting"] }

# Desktop-only plugins (not available on Android/iOS)
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.4.1"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-updater = "2.10.1"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-webdriver = { version = "0.2.1", optional = true }

# macOS-only: Objective-C bindings for dock badge
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
core-foundation = "0.10"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
# Keep debug info in the binary so production crash reports symbolicate
# without requiring a separate dSYM lookup. macOS still generates a
# .dSYM bundle alongside the build for cleaner reports.
strip = "none"
debug = "line-tables-only"
