[package]
name = "forwardemail-desktop"
version = "0.10.22"
description = "Forward Email - Privacy-focused email client"
authors = ["Forward Email <support@forwardemail.net>"]
license = "BUSL-1.1"
repository = "https://github.com/forwardemail/mail.forwardemail.net"
edition = "2021"

[lib]
name = "forwardemail_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
# Embeds a W3C WebDriver server for E2E tests. Desktop-only, never enable
# in release builds — the server binds 127.0.0.1:4445 and grants full
# automation control of the app.
webdriver = ["dep:tauri-plugin-webdriver"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }
time = "0.3"

[dependencies]
tauri = { version = "2.10.3", features = [
  "tray-icon",
  "image-png",
  "devtools",
] }
tauri-plugin-notification = "2.3.3"
tauri-plugin-deep-link = "2.4.8"
tauri-plugin-process = "2.3.1"
tauri-plugin-opener = "2.5.3"
tauri-plugin-log = "2.8.0"
tauri-plugin-os = "2.3.2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
regex = "1"
time = { version = "0.3", features = ["macros", "formatting"] }

# Desktop-only plugins (not available on Android/iOS)
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.4.1"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-updater = "2.10.1"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-webdriver = { version = "0.2.1", optional = true }

# Available on desktop + Android (handles UnifiedPush via the Android
# bridge per lib.rs). Excluded from iOS only: tauri-plugin-remote-push
# 1.0.10's published crate omits the `ios/` Xcode project, so the
# Tauri build script's xcodebuild call fails with "directory does not
# contain an Xcode project". iOS push needs to go through the native
# APNs path until upstream ships a fix.
[target.'cfg(not(target_os = "ios"))'.dependencies]
tauri-plugin-remote-push = "1.0.10"

# macOS-only: Objective-C bindings for dock badge + the custom NSOpenPanel
# wrapper that works around the rfd 0.16 / objc2-app-kit 0.3.2 panic on
# macOS 26 Tahoe (the upstream openPanel binding is non-nullable but the
# OS now returns nil under some activation conditions).
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
core-foundation = "0.10"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
  "NSApplication",
  "NSPanel",
  "NSResponder",
  "NSSavePanel",
  "NSOpenPanel",
] }
objc2-foundation = { version = "0.3", features = [
  "NSArray",
  "NSString",
  "NSURL",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
# Keep debug info in the binary so production crash reports symbolicate
# without requiring a separate dSYM lookup. macOS still generates a
# .dSYM bundle alongside the build for cleaner reports.
strip = "none"
debug = "line-tables-only"
